--- a/Vision/image_classification/model/cnn_model.ipynb
+++ b/Vision/image_classification/model/cnn_model.ipynb
@@ -889,6 +889,16 @@
       "source": [
         "predict_img(\"plane.jpg\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model_h5 = load_model('cnn_model.keras')\n",
+        "model_h5.save('cnn_model.h5')"
+      ]
     }
   ],
   "metadata": {
